# olio-ohjelmointi

./: h6a.pro  mainwindow.cpp  mainwindow.h  myclass.cpp
h/: main.cpp
h1/: README.md  main.cpp
h2/: h2a  h2b
h3/3a_/: chef.cpp  chef.h
h3/3b_/: Animal.h  Dog.h  main.cpp
h4/: Car.cpp  Car.h  Engine.cpp  Engine.h  Wheel.cpp  Wheel.h  main.cpp
h5/: ClassA1.cpp  ClassA1.h  ClassA2.cpp  ClassA2.h  ClassB.cpp  ClassB.h  main.cpp
h6a/: CMakeLists.txt  main.cpp  myclass.h
h6b/: exampleclass.cpp  exampleclass.h  h6b.pro  main.cpp
h7/: mainwindow.ui
